--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -28,6 +28,16 @@
             <label >ModDate</label>
             <input type="text" class="form-control" name="modDate" th:value="${#temporals.format(dto.modDate, 'yyyy/MM/dd HH:mm:ss')}" readonly>
         </div>
+
+        <div >
+            <div class="mt-4">
+                <h5> <span class="badge badge-info addReply">댓글 작성</span> </h5>
+                <h5> <span class="badge badge-secondary replyCount"> 댓글 [[${dto.replyCount}]]</span> </h5>
+            </div>
+            <div class="list-group replyList">
+            </div>
+        </div>
+
         <a th:href="@{/board/modify(bno = ${dto.bno}, page=${requestDTO.page}, type=${requestDTO.type}, keyword =${requestDTO.keyword})}">
             <button type="button" class="btn btn-primary">수정</button>
         </a>
@@ -37,6 +47,67 @@
         </a>
 
 
-    </th:block>
+        <script th:inline="javascript">
+            $(document).ready(function() {
+                var bno = [[${dto.bno}]];
+                var listGroup = $("•replyList");
+                $(".replyCount").click(function () {
+                    loadJSONData();
+                });
+
+                //댓글이 추가될 영역
+                var listGroup = $(".replyList");
+                //날짜 처리를 위한 함수
+                function formatTime(str){
+                    var date = new Date(str);
+                    return date.getFullYear() + '/' + (date.getMonth() + 1) + '/' + date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes();
+                }
+                //특정한 게시글의 댓글을 처리하는 함수
+                function loadJSONData() {
+                    $.getJSON('/replies/board/'+bno, function(arr){
+                        console.log(arr);
+                        var str = "";
+                        $('.replyCount').html("댓글 수 " + arr.length);
+                        $.each(arr, function(idx, reply) {
+                            console.log(reply);
+                            str += '<div class="card-body" data-rno="' + reply.rno + '"><b>' + reply.rno + '</b>';
+                            str += '<h5 class="card-title">' + reply.text + '</h5>';
+                            str += '<h6 class="card-subtitle mb-2 text-muted">' + reply.replyer + '</h6>';
+                            str += '<p class="card-text">' + formatTime(reply.regDate) + '</p>';
+                            str += '</div>';
+                        })
+                        listGroup.html(str);
+                    });
+                }
+            });
+        </script>
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span> </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyText" placeholder="댓글 작성...">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyer" placeholder="작성자..." >
+                            <input type="hidden" name="rno" >
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger replyRemove">삭제</button>
+                        <button type="button" class="btn btn-warning replyModify">수정</button>
+                        <button type="button" class="btn btn-primary replySave">추가</button>
+                        <button type="button" class="btn btn-outline-secondary replyClose" data-dismiss="modal">닫기</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+            </th:block>
 
 </th:block>
